tests/neg/i2564b.scala
class Foo private() {
  transparent def foo = new Foo // error
}
